openshift/configs/Gateway/ingressgateway-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway-gw
spec:
  selector:
    istio: ingressgateway-${NAMESPACE}
  servers:
    #GEO_TLS
    - hosts:
        - ${INGRESS_HOST_GEO_TLS}
      port:
        name: https-${INGRESS_GEO_TLS_PORT}
        number: ${INGRESS_GEO_TLS_PORT}
        protocol: HTTPS
      tls:
        caCertificates: /etc/istio/ingressgateway-ca-certs/${CHAIN_PEM_GEO_TLS}
        mode: MUTUAL
        privateKey: /etc/istio/ingressgateway-certs/${CERT_KEY_GEO_TLS}
        serverCertificate: /etc/istio/ingressgateway-certs/${CERT_GEO_TLS}
        subjectAltNames:
          - ${SUBJECT_ALT_NAME_1}
          - ${SUBJECT_ALT_NAME_2}
          - ${SUBJECT_ALT_NAME_3}
          - ${SUBJECT_ALT_NAME_4}
          - ${SUBJECT_ALT_NAME_5}
    #TLS
    - hosts:
        - ${INGRESS_HOST_TLS}
      port:
        name: https-${INGRESS_TLS_PORT}
        number: ${INGRESS_TLS_PORT}
        protocol: HTTPS
      tls:
        caCertificates: /etc/istio/ingressgateway-ca-certs/${CHAIN_PEM_TLS}
        mode: MUTUAL
        privateKey: /etc/istio/ingressgateway-certs/${CERT_KEY_TLS}
        serverCertificate: /etc/istio/ingressgateway-certs/${CERT_TLS}
        subjectAltNames:
          - ${SUBJECT_ALT_NAME_1}
          - ${SUBJECT_ALT_NAME_2}
          - ${SUBJECT_ALT_NAME_3}
          - ${SUBJECT_ALT_NAME_4}
          - ${SUBJECT_ALT_NAME_5}
    #GEO_OTT
    - hosts:
        - ${INGRESS_HOST_GEO_OTT}
      port:
        name: https-${INGRESS_GEO_OTT_PORT}
        number: ${INGRESS_GEO_OTT_PORT}
        protocol: HTTPS
      tls:
        caCertificates: /etc/istio/ingressgateway-ca-certs/${CHAIN_PEM_GEO_OTT}
        mode: MUTUAL
        privateKey: /etc/istio/ingressgateway-certs/${CERT_KEY_GEO_OTT}
        serverCertificate: /etc/istio/ingressgateway-certs/${CERT_GEO_OTT}
    #OTT
    - hosts:
        - ${INGRESS_HOST_OTT}
      port:
        name: https-${INGRESS_OTT_PORT}
        number: ${INGRESS_OTT_PORT}
        protocol: HTTPS
      tls:
        caCertificates: /etc/istio/ingressgateway-ca-certs/${CHAIN_PEM_OTT}
        mode: MUTUAL
        privateKey: /etc/istio/ingressgateway-certs/${CERT_KEY_OTT}
        serverCertificate: /etc/istio/ingressgateway-certs/${CERT_OTT}
    #HEALTHCHECK
    - hosts:
        - ${INGRESS_HOST_HEALTH_CHECK}
      port:
        name: https-${INGRESS_HEALTH_CHECK_PORT}
        number: ${INGRESS_HEALTH_CHECK_PORT}
        protocol: HTTPS
      tls:
        caCertificates: /etc/istio/ingressgateway-ca-certs/${CHAIN_PEM_GEO_TLS}
        mode: MUTUAL
        privateKey: /etc/istio/ingressgateway-certs/${CERT_KEY_GEO_TLS}
        serverCertificate: /etc/istio/ingressgateway-certs/${CERT_GEO_TLS}
